add netlify config

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate:css": "tailwindcss -o ./app/styles/tailwind.css",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "setup": "prisma generate && prisma migrate deploy && prisma db seed",
-    "start": "remix-serve build",
+    "start": "cross-env NODE_ENV=production netlify dev",
     "start:mocks": "binode --require ./mocks -- @remix-run/serve:remix-serve build",
     "test": "vitest",
     "test:e2e:dev": "start-server-and-test dev http://localhost:3000 \"npx cypress open\"",
@@ -30,6 +30,8 @@
   ],
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@netlify/functions": "^1.0.0",
+    "@remix-run/netlify": "^1.7.2",
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
